cmake_minimum_required(VERSION 3.10.0)
project(malloc VERSION 0.1.0 LANGUAGES C CXX)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_C_STANDARD 23)
add_compile_options(-Wextra -Wall  -Wshadow -Wpointer-arith -Wfloat-equal -Wshadow)
add_compile_options(-Wcast-align -pthread -libm -ftls-model=initial-exec)
add_subdirectory(src)
